--- a/popup/footer/docker.yaml
+++ b/popup/footer/docker.yaml
@@ -4,62 +4,59 @@ browser_mod:
   title: Information
   style:
     .: |
-      :host .content {
-        width: calc(385px + 385px + 385px);
-        max-width: 90vw;
+      @media screen and (min-width: 1200px) {
+        :host .content {
+          width: calc(385px + 385px + 385px);
+          max-width: 90vw;
+        }
       }
     layout-card:
-      $grid-layout$:
-        hui-entities-card:
-          $: |
-            .card-content {
-              padding: 1.5em 2.7em 2.3em 2em;
-            }
-            ha-card {
-              animation: border 1s forwards;
-              border-right: 1.5px solid rgba(0, 0, 0, 0.2);
-              border-radius: 0;
-            }
-            @keyframes border {
-              0%, 100% {
-                border-right: 1px solid rgba(0, 0, 0, 0.3);
-              }
-              transition: none;
-            }
-
-            /* phone */
-            @media screen and (max-width: 800px) {
-              ha-card {
-                border-right: none;
-                border-bottom: 1.5px solid rgba(0, 0, 0, 0.2);
-                padding-right: 0;
-                animation: none;
-              }
-            }
-          $hui-horizontal-stack-card:
+      $grid-layout:
+        $:
+          hui-entities-card:
             $: |
-              #root {
-                justify-content: space-evenly;
-                margin-top: 1.9em;
-                max-width: 82vw; /* iphonex */
+              .card-content {
+                padding: var(--card-content-padding);
+                padding-bottom: 1.2em;
               }
+              ha-card {
+                border-right: 1.5px solid rgba(0, 0, 0, 0.2);
+                border-radius: 0;
+                transition: none;
+                font-family: SF Text, Roboto;
+                letter-spacing: normal;
+              }
+              /* portrait */
+              @media screen and (max-width: 1200px) {
+                ha-card {
+                  border-right: none;
+                  border-bottom: 1.5px solid rgba(0, 0, 0, 0.2);
+                }
+              }
+            $hui-horizontal-stack-card:
+              $: |
+                #root {
+                  justify-content: space-evenly;
+                  margin-top: 1.7em;
+                  max-width: 82vw; /* iphonex */
+                }
   card:
     type: custom:layout-card
     layout_type: custom:grid-layout
     layout:
-      grid-template-columns: repeat(3, 1fr)
+      grid-template-columns: 385px 385px 385px
       grid-template-rows: 1fr
       grid-template-areas: |
-        "hass sensor network"
+        "hass sensor docker"
       mediaquery:
-        #phone
-        "(max-width: 800px)":
+        #portrait
+        "(max-width: 1200px)":
           grid-template-columns: 1fr
           grid-template-rows: repeat(3, 1fr)
           grid-template-areas: |
             "hass"
             "sensor"
-            "network"
+            "docker"
     cards:
 
       #################################################
@@ -75,30 +72,57 @@ browser_mod:
         show_header_toggle: false
         card_mod:
           class: header
-          style: |
-            ha-card {
-              margin: 0px !important;
-            }
         entities:
           - entity: sensor.hass_version_installed
 
           - entity: sensor.hass_version_latest
 
           - entity: sensor.home_assistant_log
-          
+
           - entity: sensor.home_assistant_v2_db
 
-          - entity: sensor.uptime
+          - type: attribute
+            entity: sensor.docker_homeassistant
+            attribute: uptime
+            format: relative
+            name: Last Restart
+            icon: mdi:update
 
-          - entity: sensor.docker_homeassistant_health
+          - type: attribute
+            entity: sensor.docker_homeassistant
+            attribute: health
             secondary_info: last-changed
-            style: |
-              :host {
-                --paper-item-icon-color: {{ '#9e9e9e' if is_state(config.entity, 'healthy') else '#9c2525' }};
-                }
 
-          - type: custom:hui-element
-            card_type: horizontal-stack
+          - type: custom:bar-card
+            width: 55%
+            height: 2em
+            decimal: 0
+            unit_of_measurement: '%'
+            positions: &bar_card_positions
+              icon: outside
+              indicator: 'off'
+              name: outside
+            severity: &bar_card_severity
+              - color: '#303435'
+                from: 0
+                to: 89
+              - color: '#6d2525'
+                from: 90
+                to: 999
+            entity_row: true
+            entities:
+
+              - entity: sensor.docker_homeassistant
+                attribute: cpu_percentage
+                name: Processor
+                icon: mdi:chip
+
+              - entity: sensor.docker_homeassistant
+                attribute: memory_percentage
+                name: Memory
+                icon: mdi:memory
+
+          - type: custom:hui-horizontal-stack-card
             cards:
               - type: custom:button-card
                 name: Restart HA
@@ -106,10 +130,12 @@ browser_mod:
                 tap_action:
                   services: |
                     [[[
-                      hass.callService('browser_mod', 'toast', {
-                        message: 'Restart Home Assistant...'
-                      });
-                      hass.callService('homeassistant', 'restart');
+                      return `[[[
+                        hass.callService('browser_mod', 'toast', {
+                          message: 'Restart Home Assistant...'
+                        });
+                        hass.callService('homeassistant', 'restart');
+                      ]]]`
                     ]]]
                 template: icon_name
 
@@ -119,30 +145,29 @@ browser_mod:
                 tap_action:
                   services: |
                     [[[
-                      hass.callService('browser_mod', 'toast', {
-                        message: 'Reload theme...'
-                      });
-                      hass.callService('frontend', 'reload_themes');
+                      return `[[[
+                        hass.callService('browser_mod', 'toast', {
+                          message: 'Reload theme...'
+                        });
+                        hass.callService('frontend', 'reload_themes');
+                      ]]]`
                     ]]]
                 template: icon_name
 
       #################################################
       #                                               #
-      #                   BATTERY                     #
+      #                   SENSOR                      #
       #                                               #
       #################################################
 
       - type: entities
         view_layout:
           grid-area: sensor
-        title: Sensor Status
+        title: Sensors
+        state_color: true
         show_header_toggle: false
         card_mod:
           class: header
-          style: |
-            ha-card {
-              margin: 0px !important;
-            }
         entities:
           - entity: sensor.front_door_battery
             secondary_info: >
@@ -197,8 +222,7 @@ browser_mod:
           - entity: sensor.garage_temp_battery
             style: *style_bat
 
-          - type: custom:hui-element
-            card_type: horizontal-stack
+          - type: custom:hui-horizontal-stack-card
             cards:
               - type: custom:button-card
                 name: Restart VPN
@@ -216,25 +240,27 @@ browser_mod:
                 tap_action:
                   services: |
                     [[[
-                      hass.callService('browser_mod', 'toast', {
-                        message: 'Restart Plex Container...'
-                      });
-                      hass.callService('monitor_docker', 'restart', {
-                        name: 'plex'
-                      });
+                      return `[[[
+                        hass.callService('browser_mod', 'toast', {
+                          message: 'Restart Plex Container...'
+                        });
+                        hass.callService('monitor_docker', 'restart', {
+                          name: 'plex'
+                        });
+                      ]]]`
                     ]]]
                 template: icon_name
 
       #################################################
       #                                               #
-      #                  NETWORK                      #
+      #                   DOCKER                      #
       #                                               #
       #################################################
 
       - type: entities
         view_layout:
-          grid-area: network
-        title: Network Status
+          grid-area: docker
+        title: Docker Status
         show_header_toggle: false
         card_mod:
           class: header
@@ -273,32 +299,30 @@ browser_mod:
         entities:
           - entity: sensor.docker_version
 
-          - entity: sensor.docker_vpn_health
+          - entity: sensor.docker_containers_total
+            name: Containers Total
+
+          - entity: sensor.docker_containers_running
+            name: Containers Running
+
+          - entity: sensor.docker_containers_paused
+            name: Containers Paused
+
+          - entity: sensor.docker_containers_stopped
+            name: Containers Stopped
+
+          - type: attribute
+            entity: sensor.docker_vpn
+            attribute: health
             secondary_info: last-changed
-            style: |
-              :host {
-                --paper-item-icon-color: {{ '#9e9e9e' if is_state(config.entity, 'healthy') else '#9c2525' }};
-                }
 
           - type: custom:bar-card
             width: 55%
             height: 2em
             decimal: 0
             unit_of_measurement: '%'
-            positions: &bar_card_positions
-              icon: outside
-              indicator: 'off'
-              name: outside
-            severity: &bar_card_severity
-              - color: '#303435'
-                from: 0
-                to: 49
-              - color: '#918e02'
-                from: 50
-                to: 69
-              - color: '#6d2525'
-                from: 70
-                to: 100
+            positions: *bar_card_positions
+            severity: *bar_card_severity
             entity_row: true
             entities:
 
@@ -315,47 +339,3 @@ browser_mod:
                   service: homeassistant.update_entity
                   service_data:
                     entity_id: sensor.docker_memory_percent
-
-          - type: custom:bar-card
-            width: 55%
-            height: 2em
-            decimal: 0
-            unit_of_measurement: '%'
-            positions: *bar_card_positions
-            severity: *bar_card_severity
-            entity_row: true
-            entities:
-
-              - entity: sensor.template_udm_cpu
-                tap_action:
-                  action: call-service
-                  service: homeassistant.update_entity
-                  service_data:
-                    entity_id: sensor.template_udm_cpu
-
-              - entity: sensor.template_udm_mem
-                tap_action:
-                  action: call-service
-                  service: homeassistant.template_udm_mem
-                  service_data:
-                    entity_id: sensor.template_udm_cpu
-
-        footer:
-          type: custom:mini-graph-card
-          entities:
-            - entity: sensor.template_udm_cpu
-              color: '#385581'
-              
-            - entity: sensor.template_udm_mem
-              color: green
-          align_state: left
-          group: false
-          points_per_hour: 10
-          line_width: 3
-          hour24: true
-          hours_to_show: 2
-          show:
-            {fill: fade, icon: false, name: false, state: false, 
-            name_adaptive_color: true, labels: hover, legend: false}
-          tap_action:
-            action: none
