updater add "scan updates" button

--- a/popup/footer/updater.yaml
+++ b/popup/footer/updater.yaml
@@ -9,8 +9,12 @@ browser_mod:
       }
     hui-grid-card:
       $: |
-        button-card:nth-child(2), button-card:nth-child(4) {
+        button-card:nth-child(2),
+        button-card:nth-child(4) {
           margin: 0.6em 0 2.1em 0.8em;
+        }
+        button-card:nth-child(6) {
+          margin: 0.6em 0 0.5em 0.8em;
         }
         #root {
           grid-gap: 0 !important;
@@ -94,3 +98,43 @@ browser_mod:
       - type: custom:button-card
         entity: sensor.template_updates
         template: updater_other
+
+      - type: custom:button-card
+        entity: sensor.template_updates
+        name: Check
+        icon: mdi:reload
+        styles:
+          card:
+            - width: max-content
+            - filter: 'opacity(30%)'
+            - display: >
+                [[[
+                  return `[[[
+                    return entity
+                      ? 'flex'
+                      : 'none';
+                  ]]]`
+                ]]]
+        tap_action:
+          toast: |
+            [[[
+              return `[[[
+                hass.callService('browser_mod', 'toast', {
+                  message: 'Checking for updates...',
+                  duration: 3000
+                });
+              ]]]`
+            ]]]
+          action: call-service
+          service: homeassistant.update_entity
+          service_data:
+            entity_id:
+              - sensor.template_unavailable_entities
+              - sensor.plex_version_installed
+              - sensor.plex_server_release_notes
+              - sensor.adguardhome_release_notes
+              - sensor.homer_release_notes
+              - sensor.template_updates
+              - sensor.udm_unifios
+              - sensor.template_udm_version
+        template: icon_name
