--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -569,6 +569,7 @@ views:
                   let alert1 = states['sensor.template_oakland_alert_1'];
                   let alert2 = states['sensor.template_oakland_alert_2'];
                   let missing = states['sensor.template_unavailable_entities'];
+                  let tmr_alert = states['timer.startup_missing_delay']
 
                   if (alert1 || alert2) {
                     if (alert1.state === 'on' || alert2.state === 'on') {
@@ -576,7 +577,7 @@ views:
                     }
                   }
 
-                  if (missing && Number.isInteger(parseInt(missing.state))) {
+                  if (missing && Number.isInteger(parseInt(missing.state)) && tmr_alert.state !== 'active') {
                     return parseInt(missing.state);
                   }
                   return 0;
