Add initial_state to customize

--- a/include/customize.yaml
+++ b/include/customize.yaml
@@ -4,6 +4,10 @@
 #                                                  #
 ####################################################
 homeassistant:
+  customize_domain:
+    automation:
+      initial_state: true
+
   customize:
 
     #-------------------------------------------
