--- a/popup/footer/alerts.yaml
+++ b/popup/footer/alerts.yaml
@@ -3,15 +3,15 @@ browser_mod:
   command: popup
   title: Active Alerts
   style:
-  hui-vertical-stack-card:
-    $: |
-      hui-horizontal-stack-card {
-        padding: 0em 2em 2.3em 2em;
-      }
-    $hui-horizontal-stack-card$: |
-      #root {
-        justify-content: space-evenly;
-      }
+    hui-vertical-stack-card:
+      $: |
+        hui-horizontal-stack-card {
+          padding: 0em 2em 2.3em 2em;
+        }
+      $hui-horizontal-stack-card$: |
+        #root {
+          justify-content: space-evenly;
+        }
   card:
     type: vertical-stack
     cards:
@@ -35,3 +35,27 @@ browser_mod:
           - type: custom:button-card
             entity: sensor.template_unavailable_entities
             template: updater_missing
+
+      - type: horizontal-stack
+        cards:
+          - type: custom:button-card
+            name: Refresh Alerts
+            icon: mdi:refresh
+            tap_action:
+              toast: |
+                [[[
+                  return `[[[
+                    hass.callService('browser_mod', 'toast', {
+                      message: 'Refreshing Alerts...',
+                      duration: 3000
+                    });
+                  ]]]`
+                ]]]
+              action: call-service
+              service: homeassistant.update_entity
+              service_data:
+                entity_id:
+                  - sensor.template_unavailable_entities
+                  - sensor.template_oakland_alert_1
+                  - sensor.template_oakland_alert_2
+            template: icon_name
