--- a/configuration.yaml
+++ b/configuration.yaml
@@ -40,6 +40,7 @@ lovelace:
       { url: /hacsfiles/lovelace-layout-card/layout-card.js,                        type: module },
       { url: /hacsfiles/lovelace-slider-entity-row/slider-entity-row.js,            type: module },
       { url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js,                  type: module },
+      { url: /hacsfiles/lovelace-card-mod/card-mod.js,                              type: module },
       { url: /hacsfiles/swipe-card/swipe-card.js,                                   type: module },
       { url: /hacsfiles/lovelace-canary/canary.js,                                  type: module },
       { url: /hacsfiles/simple-thermostat/simple-thermostat.js,                     type: module },
