--- a/include/logger.yaml
+++ b/include/logger.yaml
@@ -6,6 +6,7 @@ logger:
   default: info
   logs:
     homeassistant.components.websocket_api: fatal
+    homeassistant.helpers.entity: fatal
     homeassistant.components.bluetooth_tracker.device_tracker: fatal
     homeassistant.components.command_line.switch: warning
     homeassistant.components.mqtt: warning
