rm swipe-card coverflow battery status

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -391,15 +391,10 @@ views:
         columns: 1
         cards:
           - type: custom:swipe-card
-            start_card: 1
             parameters:
-              roundLengths: true
-              effect: coverflow
-              speed: 650
-              threshold: 7
-              coverflowEffect:
-                rotate: 80
-                depth: 300
+              speed: 550
+              spaceBetween: 40
+              threshold: 5
             cards:
               - type: grid
                 columns: 2
