--- a/configuration.yaml
+++ b/configuration.yaml
@@ -49,6 +49,7 @@ lovelace:
 
       { url: '/local/custom_icons.js?v=28082021',                                   type: module },
       { url: '/local/marked.min.js?v=4.0.12',                                       type: module },
+      { url: '/local/vanilla-tilt.min.js?v=1.7.2',                                  type: module },
       { url: '/local/font.css',                                                     type: css    },
       { url: '/local/7segment.css',                                                 type: css    } ]
 
