--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -947,7 +947,7 @@
       custom_fields:
         icon:
           - clip-path: circle()
-          - width: 79%
+          - width: 77%
           - pointer-events: none
           - display: grid
     custom_fields:
@@ -1361,7 +1361,7 @@
             let loader = (id, style, timeout) => {
                 elt.getElementById(id) && (elt.getElementById(id).style.display = style,
                   window.setTimeout(() => {
-                    elt.getElementById(id).style.display = timeout
+                    elt.getElementById('loader').style.display = 'none'
                   }, 20000))
             };
             loader('circle', 'none', 'initial'),
@@ -1579,9 +1579,8 @@
     styles:
       custom_fields:
         icon:
-          - width: 89%
-          - margin-top: -7%
-          - margin-left: 1%
+          - width: 87%
+          - margin-top: -8%
           - fill: >
               [[[
                 return variables.state_on ? '#616161' : '#9da0a2';
@@ -1663,9 +1662,9 @@
     styles:
       custom_fields:
         icon:
-          - width: 88%
-          - margin-left: -1%
-          - margin-top: -7%
+          - width: 89%
+          - margin-left: -2%
+          - margin-top: -9%
     custom_fields:
       icon: >
         [[[
@@ -1729,7 +1728,7 @@
     styles:
       custom_fields:
         icon:
-          - width: 70%
+          - width: 74%
           - margin-left: -8%
           - margin-top: 3%
     custom_fields:
@@ -1819,9 +1818,9 @@
     styles:
       custom_fields:
         icon:
-          - width: 82%
+          - width: 80%
           - margin-left: 1%
-          - margin-top: -6%
+          - margin-top: -5%
           - fill: >
               [[[ return variables.state_on ? '#72757c' : '#9da0a2'; ]]]
     custom_fields:
@@ -2149,7 +2148,7 @@
       custom_fields:
         icon:
           - width: 80%
-          - margin-left: -15%
+          - margin-left: -16%
     custom_fields:
       icon: >
         [[[
@@ -2260,6 +2259,8 @@
       custom_fields:
         icon:
           - width: 79%
+          - margin-left: -1%
+          - margin-top: -1%
           - fill: >
               [[[ return variables.state_on ? '#516d82' : '#9da0a2'; ]]]
     custom_fields:
@@ -2308,7 +2309,8 @@
         - transition: all 0.3s ease-out
       custom_fields:
         icon:
-          - width: 70%
+          - width: 72%
+          - margin-left: -1%
           - fill: >
               [[[ return variables.state_on ? '#c7983e' : '#9da0a2'; ]]]
     custom_fields:
