--- a/popup/climate_status.yaml
+++ b/popup/climate_status.yaml
@@ -329,7 +329,7 @@ browser_mod:
           - entity: sensor.garage_temp_temperature
             name: Garage
             secondary_info: >
-              Humidity: {{ states('sensor.garage_temp_humidity') | default | round(1) }} %
+              Humidity: {{ states('sensor.garage_temp_humidity') | float | round(1) }} %
           - type: custom:mini-graph-card
             color_thresholds: *graph_colors
             entities:
@@ -348,7 +348,7 @@ browser_mod:
           - entity: sensor.basement_temperature
             name: Basement
             secondary_info: >
-              Humidity: {{ states('sensor.basement_humidity') }} %
+              Humidity: {{ states('sensor.basement_humidity') | float | round(1) }} %
           - type: custom:mini-graph-card
             color_thresholds: *graph_colors
             entities:
